# Adhera

./: .env.example  .gitattributes  .gitignore  Makefile  PROJECT_SPEC.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  ROADMAP.md  SECURITY.md  USER_GUIDE.md
docs/adr/: 0001-monorepo-per-service-databases.md  0002-transactional-outbox.md  0003-jwt-refresh-rotation.md
frontend/angular-app/: README.md
infrastructure/docker/: init-databases.sql
services/api-gateway/: Dockerfile  requirements.txt
services/api-gateway/app/: config.py  main.py
services/api-gateway/tests/: test_health.py
services/identity-service/: Dockerfile  requirements.txt
services/identity-service/alembic/: env.py
services/identity-service/app/: config.py  db.py  main.py
services/identity-service/tests/: test_health.py
services/medication-service/: Dockerfile  entrypoint.sh  requirements.txt
services/medication-service/alembic/: env.py
services/medication-service/app/: config.py  db.py  main.py
services/medication-service/tests/: test_health.py
services/notification-service/: Dockerfile  requirements.txt
services/notification-service/alembic/: env.py
services/notification-service/app/: config.py  db.py  main.py
services/notification-service/tests/: test_health.py
shared/: __init__.py  event_schemas.py  readiness.py
shared/config/: __init__.py
shared/event-schemas/: alert_acknowledged.v1.json  caregiver_alerted.v1.json  dose_confirmation_overdue.v1.json  dose_confirmed.v1.json  dose_due.v1.json
shared/logging/: __init__.py  middleware.py
shared/test_utils/: __init__.py
shared/tests/: test_event_schemas.py  test_logging.py  test_middleware.py
tests/integration/: conftest.py  test_smoke.py
